make the game support multiple board sizes and ship lengths from the initializer; update the readme with instructions

--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 	</head>
 	<div id="board"></div>
 	<script src="./dist/bundle.js"></script>
-	<script> Battleship.initialize() </script>
+	<script> 
+		var boardDimensions = [10,10]
+		var ships = [5,4,3,3,2]
+		Battleship.initialize(boardDimensions, ships) 
+	</script>
 </html>
